Added Github login/logout and protect the User::Profile controller behind authentication

--- a/app/views/users/profile/show.html.erb
+++ b/app/views/users/profile/show.html.erb
@@ -1,1 +1,8 @@
 <h1>Profile</h1>
+
+Email: <%= current_user.email %><br>
+Name: <%= current_user.name %><br>
+Username: <%= current_user.username %><br>
+UID: <%= current_user.uid %><br>
+
+<%= link_to "Logout", logout_path %>
